RESOLVED FIXED135603
REGRESSION: Extremely flashy scrolling while a page is still loading (because of flush throttling)
https://bugs.webkit.org/show_bug.cgi?id=135603
Summary REGRESSION: Extremely flashy scrolling while a page is still loading (because...
Antti Koivisto
Reported 2014-08-05 03:45:00 PDT
Disable throttling on user scroll.
Attachments
patch (1.90 KB, patch)
2014-08-05 03:50 PDT, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2014-08-05 03:50:46 PDT
Antti Koivisto
Comment 2 2014-08-05 03:51:07 PDT
Pratik Solanki
Comment 3 2014-08-05 07:58:39 PDT
Comment on attachment 236024 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=236024&action=review > Source/WebCore/ChangeLog:4 > + https://bugs.webkit.org/show_bug.cgi?id=135603 Can you add the radar link as well.
Andreas Kling
Comment 4 2014-08-05 09:11:25 PDT
Comment on attachment 236024 [details] patch r=me
Antti Koivisto
Comment 5 2014-08-05 11:35:52 PDT
Antti Koivisto
Comment 6 2014-08-05 13:16:33 PDT
followup to avoid assert in https://trac.webkit.org/r172053
Note You need to log in before you can comment on or make changes to this bug.