REGRESSION: Extremely flashy scrolling while a page is still loading (because of flush throttling) https://bugs.webkit.org/show_bug.cgi?id=135603 <rdar://problem/17876385>

This hit ASSERT(frame().isMainFrame()) in FrameView::updateLayerFlushThrottling
running scrollbars/scrollbar-iframe-click-does-not-blur-content.html and a few other tests.

* page/FrameView.cpp:
(WebCore::FrameView::setWasScrolledByUser): Only invoke updateLayerFlushThrottling for the main frame.



Canonical link: https://commits.webkit.org/153478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172053 268f45cc-cd09-0410-ab3c-d52691b4dbfc